// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay Item No background matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="overlayNoBackground"
    data-testid="overlay"
  >
    <div>
      <button
        class="button css-tknci1"
      >
        This is a test
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Overlay Item With background matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="overlay"
    data-testid="overlay"
  >
    <div>
      <button
        class="button css-tknci1"
      >
        This is a test
      </button>
    </div>
  </div>
</DocumentFragment>
`;
